src/test/ui/feature-gate-universal.stderr
error[E0658]: `impl Trait` in argument position is experimental (see issue #34511)
  --> $DIR/feature-gate-universal.rs:13:11
   |
13 | fn foo(x: impl std::fmt::Debug) { print!("{:?}", x); }
   |           ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(universal_impl_trait)] to the crate attributes to enable

error: aborting due to previous error

